to test merge conflict

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <p id="p1">Hello from sam</p>
+        <p id="p1">Hello from samarth sanikop</p>
         <p>This is to check the merge and branch</p>
     </body>
 </html>
