--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
     <body>
-        <p id="p1">Hello from sam</p>
-        <p>This is to check the merge and branch</p>
+        man i love th;
     </body>
 </html>
