--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <body>
         <p id="p1">Hello from samarth from dharwad man baby he likes th</p>
         samrth is in love with ranjana sorry not love but crush
+        hey buddy this is to check for normal merging
     </body>
 </html>
