--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <html>
     <body>
-        man i love th;
-        <p id="p1">Hello from samarth from dharwad man baby he likes th</p>
-        samrth is in love with ranjana sorry not love but crush
-        hey buddy this is to check for normal merging
+        <p>hello this is for the practice session</p>
     </body>
 </html>
