--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
     <body>
-        <p id="p1">Hello from samarth from dharwad man baby he likes th</p>
-        samrth is in love with ranjana sorry not love but crush
-        hey buddy this is to check for normal merging
+        <p>heloo this is sammy</p>
     </body>
 </html>
